--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,23 @@
 <main class="app-container">
   <div class="header-section">
-    <h1 class="main-heading">Welcome</h1>
+    <h1 class="main-heading">Government Department Bulletin Board</h1>
 
     <nav class="nav-section">
-      <a class="nav-link" routerLink="">List</a>
-      <a class="nav-link" routerLink="add">Add</a>
-      <a class="nav-link" routerLink="login">Login</a>
-      <a class="nav-link" routerLink="signup">Signup</a>
+      <a class="nav-link" routerLink="posts">Announcements</a>
+      <a class="nav-link" routerLink="add">Add Announcement</a>
+    
+      <!-- Display 'Login' or 'Logout' based on token presence in local storage -->
+      <a *ngIf="!authservice.getToken()" class="nav-link" routerLink="login">Login</a>
+      <a *ngIf="authservice.getToken()" class="nav-link" (click)="logout()">Logout</a>
+    
+      <!-- Display 'Register' only if not authenticated -->
+      <a *ngIf="!authservice.getToken()" class="nav-link" routerLink="signup">Register</a>
+      
+      <!-- Display user's name if authenticated -->
+      <!-- Assuming you have a method in your service to get the current user's name. -->
+      <span *ngIf="authservice.currentUser?.name">Welcome, {{ authservice.currentUser.name }}!</span>
     </nav>
+    
   </div>
 
   <section class="content-section">
