--- a/src/app/posts/posts-display/posts-display.component.css
+++ b/src/app/posts/posts-display/posts-display.component.css
@@ -34,13 +34,29 @@ div {
     background-color: #e84118;
   }
   /* Post Item */
-.post-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid #ccc;
-    padding: 15px;
+  .post-item {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s;
   }
+  
+  .post-item:hover {
+    background-color: #616161;
+  }
+  
+  .post-details {
+    margin-top: 10px;
+    padding: 10px;
+    background-color: #e9e9e9;
+    border-radius: 5px;
+  }
+  
+  .post-actions {
+    margin-top: 10px;
+  }
+  
   
   .post-info {
     flex: 1;
@@ -70,4 +86,13 @@ div {
     opacity: 0.8;
   }
   
-  
+  .error-message {
+    background-color: #f44336;  
+    color: #ffffff;            
+    padding: 10px 15px;        
+    border-radius: 4px;        
+    margin: 10px 0;            
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1); 
+    max-width: 80%;            
+    word-wrap: break-word;     
+}
