--- a/src/app/posts/posts-display/posts-display.component.css
+++ b/src/app/posts/posts-display/posts-display.component.css
@@ -1,6 +1,6 @@
 /* Container for each post */
 div {
-    max-width: 600px;
+    max-width: 100%;
     margin: 10px auto;
     padding: 20px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
