--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,9 @@
     <h1 class="main-heading">Government Department Bulletin Board</h1>
 
     <nav class="nav-section">
-      <a class="nav-link" routerLink="posts">Announcements</a>
-      <a class="nav-link" routerLink="add">Add Announcement</a>
+      <a *ngIf="authservice.getToken()" class="nav-link" routerLink="posts">Announcements</a>
+      <a *ngIf="authservice.getToken()" class="nav-link" routerLink="add">Add Announcement</a>
+    
     
       <!-- Display 'Login' or 'Logout' based on token presence in local storage -->
       <a *ngIf="!authservice.getToken()" class="nav-link" routerLink="login">Login</a>
